--- a/index.html
+++ b/index.html
@@ -13,26 +13,42 @@
 <body>
   <div class="box">
     <div class="carte">
+      <div class="img">
+        <img src="assets/images/icon-sedans.svg" alt="sedans">
+      </div>
       <div class="txt">
         <h2>Sedans</h2>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
       </div>
-
-
+      <div class="btn">
+        <a href="">Learn More</a>
+      </div>
     </div>
     <div class="carte deux">
+      <div class="img">
+        <img src="assets/images/icon-suvs.svg" alt="suv">
+      </div>
       <div class="txt">      
         <h2>SUVs</h2>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
       </div>
+      <div class="btn">
+        <a href="">Learn More</a>
+      </div>
     </div>
     <div class="carte trois">
+      <div class="img">
+        <img src="assets/images/icon-luxury.svg" alt="suv">
+      </div>
       <div class="txt">
         <h2>Luxury</h2>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
+      </div>
+      <div class="btn">
+        <a href="">Learn More</a>
       </div>
     </div>
   </div>
