--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="box">
-    <div class="carte">
+    <div class="carte une">
       <div class="img">
         <img src="assets/images/icon-sedans.svg" alt="sedans">
       </div>
